[package]
name = "fleet-warden"
version = "0.1.0"
edition = "2024"
description = "Automated disk cleanup daemon for WSL development environments"
license = "MIT"
repository = "https://github.com/SuperInstance/fleet-warden"

[[bin]]
name = "fleet-warden"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
indicatif = "0.17"
console = "0.15"
humansize = "2"
log = "0.4"
env_logger = "0.11"
daemonize = "0.5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
